legacy용 조회 구현