@@ -3,7 +3,11 @@ package com.example.fdppoc.repository;
 import com.example.fdppoc.code.BaseRange;
 import com.example.fdppoc.entity.*;
 import com.example.fdppoc.repository.dto.*;
+import com.querydsl.core.BooleanBuilder;
 import com.querydsl.core.Tuple;
+import com.querydsl.core.types.Predicate;
+import com.querydsl.core.types.Visitor;
+import com.querydsl.core.types.dsl.BooleanExpression;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
@@ -14,6 +18,7 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -85,8 +90,8 @@ public class ProcessedPriceInfoRepositoryCustom {
                 )
                 .fetch();
         return GetPriceDiffOut.builder()
-                .basePrice(result.getLast().get(processedPriceInfo.price.avg()).longValue())
-                .baseDate(result.getLast().get(processedPriceInfo.baseDate))
+                .basePrice(result.get(result.size()-1).get(processedPriceInfo.price.avg()).longValue())
+                .baseDate(result.get(result.size()-1).get(processedPriceInfo.baseDate))
                 .meanPrice(result.stream()
                         .map(element->element.get(processedPriceInfo.price.avg()))
                         .reduce((a, b) -> a+b).get().longValue()/result.size()
@@ -94,36 +99,40 @@ public class ProcessedPriceInfoRepositoryCustom {
                 .pastDate(result.get(0).get(processedPriceInfo.baseDate))
                 .build();
     }
-    //Legacy용
-    public Map<Long,InnerProduct> getAllProduct(GetAllProductIn in){
-        JPAQueryFactory query = new JPAQueryFactory(entityManager);
-        QInnerProduct innerProduct = QInnerProduct.innerProduct;
-        List<InnerProduct> result = query.select(innerProduct)
-                .from(innerProduct)
-                .where(innerProduct.isAvailable.eq(true)).fetch();
-        return result.stream().collect(Collectors.toMap(InnerProduct::getId,element -> element));
-    }
+
 
     public List<GetPriceDiffListOut> getPriceDiffList(GetPriceDiffListIn in){
         QProcessedPriceInfo processedPriceInfo = QProcessedPriceInfo.processedPriceInfo;
         QUserGroupCode userGroupCode = QUserGroupCode.userGroupCode;
         QUserCode userCode = QUserCode.userCode;
         QInnerProduct innerProduct = QInnerProduct.innerProduct;
+        QBaseProduct baseProduct = QBaseProduct.baseProduct;
         JPAQueryFactory query = new JPAQueryFactory(entityManager);
+
 
         List<Tuple> result = query.select(
                         innerProduct
                         ,processedPriceInfo.baseDate
                         ,processedPriceInfo.price.avg()
                 )
-                .from(processedPriceInfo, userGroupCode, innerProduct, userCode)
+                .from(userGroupCode, userCode, innerProduct )
+                .join(baseProduct).on(baseProduct.innerProduct.id.eq(innerProduct.id))
+                .leftJoin(processedPriceInfo)
+                    .on(processedPriceInfo.baseProduct.id.eq(baseProduct.id))
                 .where(
-                        processedPriceInfo.baseDate.between(in.getStartDate(), in.getEndDate())
-                                .and(processedPriceInfo.baseRange.eq(BaseRange.DAY))
-                                .and(processedPriceInfo.regionInfo.id.eq(userCode.codeDetailName.castToNum(Long.class)))
-                                .and(userGroupCode.eq(in.getRegionGroup()))
-                                .and(userCode.userGroupCode.eq(in.getRegionGroup()))
-                                .and(processedPriceInfo.baseProduct.in(innerProduct.baseProducts))
+                        innerProduct.isAvailable.eq(true)
+                                ,(processedPriceInfo.baseDate.between(in.getStartDate(), in.getEndDate())
+                                        .or(processedPriceInfo.baseDate.isNull())
+                                )
+                                ,(processedPriceInfo.baseRange.eq(BaseRange.DAY)
+                                        .or(processedPriceInfo.baseRange.isNull())
+                                )
+                                ,(processedPriceInfo.regionInfo.id.eq(userCode.codeDetailName.castToNum(Long.class))
+                                        .or(processedPriceInfo.regionInfo.isNull())
+                                )
+                                ,(userGroupCode.eq(in.getRegionGroup()))
+                                ,(userCode.userGroupCode.eq(in.getRegionGroup()))
+                                //.and(processedPriceInfo.baseProduct.in(innerProduct.baseProducts))
                 ).groupBy(
                         innerProduct,
                         processedPriceInfo.baseDate
@@ -131,8 +140,8 @@ public class ProcessedPriceInfoRepositoryCustom {
                 .fetch();
         //log.info("실행결과 : {}",result);
         return result.stream().map(element -> GetPriceDiffListOut.builder().innerProduct(element.get(innerProduct))
-                .price(element.get(processedPriceInfo.price.avg()))
-                .baseDate(element.get(processedPriceInfo.baseDate))
+                .price(Optional.ofNullable(element.get(processedPriceInfo.price.avg())))
+                .baseDate(Optional.ofNullable(element.get(processedPriceInfo.baseDate)))
                 .build()).collect(Collectors.toList());
     }
 }
